Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.2
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Translation updates:
  - Brazilian (#2524796)
  - Swedish (#2511043)

WinMerge 2.13.1 - 2009-01-15 (r6334)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area indicator in location pane (#2479804)
  Better Unicode file detection for full contents compare (#2477657)
  New options page for Shell Integration options (#2433648)
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Bugfix: Line filter editing didn't update edit box when editing was
   canceled by ESC key (#2493935)
  Bugfix: Wrong number shown for difference when using line filters (#2493980)
  Bugfix: Crashed if compared file disappeared during file compare (#2493945)
  Translation updates:
  - Brazilian (#2461443)
  - Czech (r6201)
  - Dutch (#2481022, #2494378, #2499994)
  - Swedish (#2452467, #2465385)

WinMerge 2.12.x (R2_12) branch created (r6202)

WinMerge 2.11.1.8 - 2008-12-19 (r6200)
  Allow reloading the file if it has been changed on the disk
    behind WinMerge (#2354125)
  Add option to show Open-dialog on WinMerge startup (#2327424)
  Add Git to Source Control filter and fix ignore file rules (#2329381)
  Add build identifier for 64-bit builds to About-dialog (r6142)